<resources>
    <string name="app_name" translatable="false">TradingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="browse">Browse</string>
    <string name="coin">Coin</string>
    <string name="wallet">Wallet</string>
    <string name="dont_have_account">Don`t have an account yet?</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="accept_privacy">I agree to all terms</string>
    <string name="language_info">Please choose your preferred language</string>
    <string name="uzbek">Uzbek</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="hind_tili">Indian</string>
    <string name="save">Save</string>
    <string name="location_info">Please click save after entering the address</string>
    <string name="enter_address">Enter Address</string>
    <string name="copy">Copy</string>
    <string name="premium">Premium</string>
    <string name="standart">Standart</string>
    <string name="deposit">Deposit</string>
    <string name="hello">Hello 👋</string>
    <string name="current_balance">Your Current Ammount</string>
    <string name="browses">Sections</string>
    <string name="trendlar">Trends</string>
    <string name="see_all">See All</string>
    <string name="store">Market</string>
    <string name="your_balance">Sizning hisobingiz</string>
</resources>