<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="220dp"
    android:layout_margin="10dp"
    android:background="@drawable/bg_connection">
    <androidx.cardview.widget.CardView
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        app:cardBackgroundColor="@color/nav_tab"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp">

        <TextView
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/location_info"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addLocationTxt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/enter_address"
            app:boxStrokeColor="@color/basic_color_500"
            app:boxStrokeWidth="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:startIconDrawable="@drawable/location"
            app:startIconTint="@color/basic_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:insetLeft="0dp"
            android:layout_marginBottom="30dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            app:backgroundTint="@color/basic_color"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/addLocationTxt"
            app:layout_constraintTop_toBottomOf="@+id/addLocationTxt" />

        <com.google.android.material.button.MaterialButton
            android:id='@+id/copyBtn'
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="121dp"
            android:layout_height="48dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/copy"
            android:textColor="@color/dark_grey"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            app:layout_constraintTop_toTopOf="@+id/saveBtn"
            app:strokeColor="@color/library_back_color_88" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>